@@ -2,7 +2,8 @@ v0.3.1 (unreleased):
 
 - Added a `--prune` flag to delete remote-tracking branches that no longer
   exist on their remote after fetching.
-- Added a '--bookmark-file' option to support multiple bookmark config files.
+- Added a `--bookmark-file` flag to support multiple bookmark config files.
+- Added a `--cleanup` flag to remove old bookmarks that don't exist.
 - Cleaned up the bookmark file format, fixing a related Windows bug. The script
   will automatically migrate to the new one.
 - Fixed a bug related to Python 3 compatibility.
